--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
+    <head>
   <meta charset="utf-8">
-  <title>My Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+  <title>Fresh App</title>
   <style>
+    /* Small screens */
+@media only screen and (max-width: 600px) {
+  /* Styles go here */
+}
+
+/* Medium screens */
+@media only screen and (min-width: 601px) and (max-width: 960px) {
+  /* Styles go here */
+}
+
+/* Large screens */
+@media only screen and (min-width: 961px) {
+  /* Styles go here */
+}
 
 /* "X" symbol */
 .close-button {
@@ -28,7 +45,6 @@
 #drawer.open .close-button {
   display: block;
 }
-
 
     /* Navigation drawer */
 #drawer {
