--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <header>
         <h1>Fresh App</h1>
-        <button class="theme-button">Dark Theme</button>
+        <button class="theme-button">Light Theme</button>
     </header>
 </head>
 
@@ -90,7 +90,7 @@
     /* "X" symbol */
     .close-button {
         position: absolute;
-        top: 20px;
+        top: 40px;
         left: 20px;
         display: none;
         width: 50px;
@@ -118,7 +118,7 @@
         left: -250px;
         width: 250px;
         height: 100%;
-        background-color: #fff;
+        background-color: #02569B;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         transition: left 0.3s;
     }
@@ -146,8 +146,7 @@
     #drawer-button svg {
         width: 30px;
         height: 30px;
-        fill: #333;
-    }
+        fill: #02569B;    }
 
     /* Page content */
     main {
@@ -163,7 +162,7 @@
         font-size: 18px;
         font-weight: normal;
         color: #333;
-        background-color: #f7f7f7;
+        color: #02569B;
         float: right;
     }
 
@@ -200,7 +199,7 @@
 
     <!-- Navigation drawer -->
     <nav id="drawer">
-        <h1>Fresh App</h1>
+        <h1>FRESH APP MENU</h1>
         <ul>
             <li><button>Home</button></li>
             <li><button>About</button></li>
