--- a/index.html
+++ b/index.html
@@ -151,8 +151,16 @@
     /* Page content */
     main {
         margin: 50px;
+        margin-left: 70px;
+        padding: 20px;
     }
 
+    /* header main {
+  /* Indent the content */
+  margin-left: 70px;
+  /* Add padding */
+  padding: 20px;
+} */
 
 
     /* Navigation drawer title */
