--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        background-color: #333;
+        background-color: #02569B;
         color: #fff;
         display: flex;
         justify-content: space-between;
@@ -154,14 +154,6 @@
         margin-left: 70px;
         padding: 20px;
     }
-
-    /* header main {
-  /* Indent the content */
-  margin-left: 70px;
-  /* Add padding */
-  padding: 20px;
-} */
-
 
     /* Navigation drawer title */
     #drawer h1 {
