--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         font-size: 18px;
         font-weight: normal;
         color: #333;
-        color: #02569B;
+        color: #ffffff;
         float: right;
     }
 
