--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     .close-button svg {
         width: 30px;
         height: 30px;
-        fill: #333;
+        fill: rgb(255, 255, 255);
     }
 
     #drawer.open .close-button {
@@ -176,7 +176,7 @@
         width: 100%;
         padding: 20px;
         font-size: 16px;
-        color: #333;
+        color: rgb(255, 255, 255);
         background-color: transparent;
         border: none;
         cursor: pointer;
@@ -199,7 +199,7 @@
 
     <!-- Navigation drawer -->
     <nav id="drawer">
-        <h1>FRESH APP MENU</h1>
+        <h1>MENU ITEMS</h1>
         <ul>
             <li><button>Home</button></li>
             <li><button>About</button></li>
