--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        background-color: blue;
+        background-color: #02569B;
         color: #fff;
         display: flex;
         justify-content: space-between;
@@ -147,7 +147,7 @@
         left: -250px;
         width: 250px;
         height: 100%;
-        background-color: blue;
+        background-color: #02569B;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         transition: left 0.3s;
     }
@@ -174,7 +174,7 @@
 /* Style for selected buttons */
 #navbar a.selected {
     background-color: #333;
-    color: blue;
+    color: #02569B;
   }
   
  /* Style the selected navbar item */
@@ -207,7 +207,7 @@
       }
 
       #navbar a:hover {
-        color: #ccc;
+        color: rgb(255, 0, 0);
       }
 
       
@@ -216,7 +216,7 @@
     #drawer-button svg {
         width: 30px;
         height: 30px;
-        fill: blue;    }
+        fill: #02569B;    }
 
     /* Page content */
     main {
